--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "antd": "^5.12.1",
+    "hamburger-react": "^2.5.0",
     "next": "^13.4.19",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.3",
